# web-capture

./: Cargo.toml  Containerfile  build.rs
.github/workflows/: ci.yaml
proto/web_capture/v1/: web_capture.proto
src/: browser.rs  config.rs  error.rs  main.rs  service.rs
